k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server-api
  template:
    metadata:
      labels:
        component: server-api
    spec:
      containers:
        - name: api
          image: aquintero446/api:latest
          ports:
            - containerPort: 4000
